--- a/index.Rmd
+++ b/index.Rmd
@@ -18,21 +18,14 @@ github-repo: "rstudio/bookdown-demo"
   
 ---
 
+
+
+
 # Introduction
 
-## The problem setting
-
-I order to design quantum algorithms we need to know how to execute
-functions on a quantum computer. In particular, we are interested in
-functions that take a (binary) number, and output a truth value (i.e.,
-\({0, 1}\). That is, functions of the form \(f : {0, 1}n → {0, 1}\)
-
-Let us consider the following problem: There is a univariate function $f$, defined over the binary alphabet $0,1,$ with output range in the same alphabet $0,1$. I.e., $f:\{0,1\}\rightarrow \{0,1\}$.
+![Resourse: www.information-age.com](https://informationage-production.s3.amazonaws.com/uploads/2024/09/GettyImages-2156615862.jpg)
 
 
-We are given a function:
- \[f : \{0,1\} \to \{0,1\}\]
- Our goal is to determine whether $f$ is:
-- Constant: $f (0) = f(1)$ (same output for both inputs) 
-- Balanced: $f (0)= f(1) $(different outputs for each input) 
+
+
 
